--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     
     <footer class="footer">&copy; 2025 Job Bascket. All Rights Reserved.</footer>
     
-    <script src="script.js"></script>
+    <script src="data.js"></script>
+<script src="script.js"></script>
+
 </body>
 </html>
