--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     
     <script src="data.js"></script>
 <script src="script.js"></script>
+    <script src="ham.js"></script>
 
 </body>
 </html>
