--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,7 @@
     <footer class="footer">&copy; 2025 Job Portal. All Rights Reserved.</footer>
     
     <script src="contact.js"></script>
+    <script src="ham.js"></script>
 
 </body>
 </html>
