--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </button>
         </div>
         <nav id="navbar-links" class="navbar">
-          <a href="./index.html">Home</a>
+          <a href="./index.html">Jobs</a>
           
           <a href="contact.html">Contact</a>
         </nav>
