--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <meta name="keywords" content="jobs, hiring, careers, employment, job search">
     <meta name="author" content="Shanu">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://yourwebsite.com/">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7963737258247463"
+     crossorigin="anonymous"></script>
+    <link rel="canonical" href="https://jobbasket.netlify.app/">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" /> <!-- For Font Awesome Icons -->
 
