--- a/about.html
+++ b/about.html
@@ -20,7 +20,8 @@
         </div>
         <nav id="navbar-links" class="navbar">
           <a href="./index.html">Jobs</a>
-          <a href="./about.html">Jobs</a>
+          <a href="./about.html">About Us</a>
+             <a href="./policy.html">Privacy & Policy</a>
         
           <a href="contact.html">Contact</a>
         </nav>
