--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         </div>
         <nav id="navbar-links" class="navbar">
           <a href="./index.html">Jobs</a>
-          
+           <a href="./about.html">About Us</a>
+             <a href="./policy.html">Privacy & Policy</a>
           <a href="contact.html">Contact</a>
         </nav>
       </header>
@@ -49,7 +50,7 @@
 </script>
     </div>
 
-     <div class="content-section">
+     <div class="content-section" style="padding-inline:5px;">
         <h1>Ultimate Guide to Landing Your Dream Job</h1>
         <p>Finding the right job is not just about sending applications. It requires a well-planned strategy, persistence, and the right skillset. Below is a complete guide to help you secure the best job opportunities.</p>
 
@@ -134,7 +135,7 @@
         </script>
     </div>
 
-    <div class="content-section">
+    <div class="content-section" style="padding-inline:5px;" >
         <h1>Ultimate Guide to Landing Your Dream Job</h1>
         <p>Finding the right job is not just about sending applications. It requires a well-planned strategy, persistence, and the right skillset. Below is a complete guide to help you secure the best job opportunities.</p>
 
