--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,8 @@
         </div>
         <nav id="navbar-links" class="navbar">
           <a href="./index.html">Jobs</a>
-        
+          <a href="./index.html">Jobs</a>
+          <a href="./about.html">About Us</a>
           <a href="contact.html">Contact</a>
         </nav>
       </header>
