--- a/policy.html
+++ b/policy.html
@@ -59,10 +59,10 @@
     <p>We may update this Privacy Policy periodically. We encourage you to review it regularly.</p>
     
     <h2>Contact Us</h2>
-    <p>If you have any questions about our Privacy Policy, please contact us at <strong>[Your Email Address]</strong>.</p>
+    <p>If you have any questions about our Privacy Policy, please contact us at edumo9017@gmail.com</strong>.</p>
 </div>
     </div>
-    <footer class="footer">&copy; 2025 Job Portal. All Rights Reserved.</footer>
+    <footer class="footer">&copy; 2025 Job Basket. All Rights Reserved.</footer>
     
     <script src="contact.js"></script>
     <script src="ham.js"></script>
