--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </script>
     </div>
 
-     <div class="content-section" style="padding-inline:5px;">
+     <div class="content-section" style="padding:15px;">
         <h1>Ultimate Guide to Landing Your Dream Job</h1>
         <p>Finding the right job is not just about sending applications. It requires a well-planned strategy, persistence, and the right skillset. Below is a complete guide to help you secure the best job opportunities.</p>
 
@@ -135,7 +135,7 @@
         </script>
     </div>
 
-    <div class="content-section" style="padding-inline:5px;" >
+    <div class="content-section" style="padding:15px;" >
         <h1>Ultimate Guide to Landing Your Dream Job</h1>
         <p>Finding the right job is not just about sending applications. It requires a well-planned strategy, persistence, and the right skillset. Below is a complete guide to help you secure the best job opportunities.</p>
 
