--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
         </ul>
          
 
+     </div>
 
-
-    <div class="job-listing" id="jobContainer"></div>
+    
 
     <div class="ad-banner">
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7963737258247463"
